remove unneeded files, add hover color for cells, win condition prompt, and squashed some bugs

--- a/styles/index.css
+++ b/styles/index.css
@@ -35,6 +35,10 @@ table, th, td {
   cursor: pointer;
 }
 
+#game_board tr td:hover{
+  background-color: darkgray;
+}
+
 #game_info {
   width: 216px;
   margin-top: 32px;
